test: Collections.emptyListからList.of()への記述統一